--- a/style.css
+++ b/style.css
@@ -12,13 +12,15 @@
 }
 
 .navbar_svg-frame {
+    position: absolute;
     right: 10%;
-    background-image: url('/websitesvgs/circuitsystem.svg')
-    z-index: 100;
+    top: 30%;
+    z-index: 50;
 }
 
-svg {
-    cursor: pointer;
+.svg-menu {
+    width: 100%;
+    height: auto;
 }
 
 #resistor {
