--- a/style.css
+++ b/style.css
@@ -13,8 +13,8 @@
 
 .navbar_svg-frame {
     position: absolute;
-    right: 10%;
-    top: 30%;
+    right: 60px;
+    top: 20%;
     z-index: 50;
 }
 
