--- a/style.css
+++ b/style.css
@@ -19,8 +19,12 @@
 }
 
 .svg-menu {
-    width: 100%;
-    height: auto;
+    position: absolute;
+    top: 70px; 
+    left: 31px; 
+    z-index: 51;
+    top: 10%;
+    z-index: 50;
 }
 
 #resistor {
