--- a/style.css
+++ b/style.css
@@ -6,11 +6,14 @@
     font-style: normal;
 } 
 
-html, body {
+body {
     margin: 0;
     padding: 0;
-    height: 100%;
     background-color: #dbca9a;
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+    overflow: hidden;
     background-image: 
       radial-gradient(#aa6623 3px, transparent 4px),
       radial-gradient(#8d7d76 3px, transparent 4px),
@@ -25,28 +28,25 @@ html, body {
       30px 30px,
       15px 25px;
     image-rendering: pixelated;
-  }
+}
   
+  .navbar_svg-frame {
+    position: absolute;
+    top: 10%;
+    right: 5%;
+    z-index: 50;
+}
+  
+  .svg-menu {
+    position: absolute;
+    top: 15%;
+    right: 5.5%;
+    z-index: 60;
+}
 
 :root {
     --resistor: #704F43;
     --opamp :#835B4D;
-}
-
-.navbar_svg-frame {
-    position: absolute;
-    right: 5%;
-    top: 10%;
-    z-index: 50;
-}
-
-.svg-menu {
-    position: absolute;
-    top: 97px; 
-    left: 22px; 
-    z-index: 51;
-    top: 10%;
-    z-index: 50;
 }
 
 #resistor {
