--- a/style.css
+++ b/style.css
@@ -15,11 +15,9 @@ body {
     width: 100vw;
     overflow: hidden;
     background-image: 
-      radial-gradient(#aa6623 2px, transparent 3px),
-      radial-gradient(#8d7d76 2px, transparent 3px),
-      radial-gradient(#698471 2px, transparent 3px),
-      radial-gradient(#85afad 2px, transparent 3px),
-      radial-gradient(#a7623e 2px, transparent 3px);
+      radial-gradient(#698471 1.5px, transparent 2px, z-index 15),
+      radial-gradient(#85afad 1.5px, transparent 2px 15),
+      radial-gradient(#a7623e 1.5px, transparent 2px 15);
     background-size: 40px 40px;
     background-position: 
       0 0,
@@ -29,6 +27,22 @@ body {
       15px 25px;
     image-rendering: pixelated;
 }
+
+.ascii-message {
+    font-family: 'NintendoNess', monospace;
+    font-size: 12px;
+    white-space: pre-wrap;
+    line-height: 1.3;
+    color: #3b2c25;
+    position: absolute;
+    top: 5%;
+    left: 5%;
+    z-index: 10;
+    background-color: #c1bcba;
+    padding: 12px;
+    image-rendering: pixelated;
+    pointer-events: none;
+  }
   
   .navbar_svg-frame {
     position: absolute;
@@ -39,8 +53,8 @@ body {
   
   .svg-menu {
     position: absolute;
-    top: 17%;
-    right: 5%;
+    top: 24.6%;
+    right: 7.2%;
     z-index: 60;
 }
 
