--- a/style.css
+++ b/style.css
@@ -5,6 +5,12 @@
     font-weight: normal;
     font-style: normal;
 } 
+@font-face {
+    font-family: 'NintendoNess';
+    src: url('Attachments/nintendo-nes-font.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+  }
 
 body {
     margin: 0;
