--- a/style.css
+++ b/style.css
@@ -22,8 +22,8 @@ body {
     overflow: hidden;
     background-image: 
       radial-gradient(#698471 1.5px, transparent 2px, z-index 15),
-      radial-gradient(#85afad 1.5px, transparent 2px 15),
-      radial-gradient(#a7623e 1.5px, transparent 2px 15);
+      radial-gradient(#85afad 1.5px, transparent 2px),
+      radial-gradient(#a7623e 1.5px, transparent 2px);
     background-size: 40px 40px;
     background-position: 
       0 0,
@@ -36,15 +36,14 @@ body {
 
 .ascii-message {
     font-family: 'NintendoNess', monospace;
-    font-size: 12px;
+    font-size: 9px;
     white-space: pre-wrap;
     line-height: 1.3;
-    color: #3b2c25;
+    color: rgba(59, 44, 37, 0.15);
     position: absolute;
     top: 5%;
     left: 5%;
     z-index: 10;
-    background-color: #c1bcba;
     padding: 12px;
     image-rendering: pixelated;
     pointer-events: none;
@@ -52,15 +51,15 @@ body {
   
   .navbar_svg-frame {
     position: absolute;
-    top: 10%;
-    right: 5%;
+    top: 108px;
+    right: 96px;
     z-index: 50;
 }
   
   .svg-menu {
     position: absolute;
-    top: 24.6%;
-    right: 7.2%;
+    top: 201px;
+    right: 120px;
     z-index: 60;
 }
 
