--- a/style.css
+++ b/style.css
@@ -20,10 +20,10 @@ body {
     height: 100vh;
     width: 100vw;
     overflow: hidden;
-    background-image: 
-      radial-gradient(#698471 1.5px, transparent 2px, z-index 15),
-      radial-gradient(#85afad 1.5px, transparent 2px),
-      radial-gradient(#a7623e 1.5px, transparent 2px);
+    background-image:
+        radial-gradient(#698471 1.5px, transparent 2px),
+        radial-gradient(#85afad 1.5px, transparent 2px),
+        radial-gradient(#a7623e 1.5px, transparent 2px);
     background-size: 40px 40px;
     background-position: 
       0 0,
