--- a/style.css
+++ b/style.css
@@ -39,8 +39,7 @@ body {
     font-size: 7px; 
     white-space: pre;
     line-height: 1.1;
-    color: rgba(123, 116, 94, 0.2); /
-    position: absolute;
+    color: rgba(123, 116, 94, 0.2); 
     z-index: 10;
     pointer-events: none;
     image-rendering: pixelated;
