cut the txt image domn to 1

--- a/style.css
+++ b/style.css
@@ -38,6 +38,10 @@ body {
     position: absolute;
     z-index: 5;
     pointer-events: none;
+    user-select: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
 }
   
   
