--- a/style.css
+++ b/style.css
@@ -17,9 +17,9 @@ body {
     padding: 0;
     background-color: #dbca9a;
     background-image:
-      radial-gradient(#698471 1.5px, transparent 0.5px),
-      radial-gradient(#85afad 1.5px, transparent 0.5px),
-      radial-gradient(#a7623e 1.5px, transparent 0.5px);
+      radial-gradient(#698471 1px),
+      radial-gradient(#85afad 1px),
+      radial-gradient(#a7623e 1px);
     background-size: 40px 40px;
     background-position: 0 0;
     image-rendering: pixelated;
