edited js file to update loading text

--- a/css/layout.css
+++ b/css/layout.css
@@ -285,4 +285,4 @@ html, body {
   .ob-typed   { grid-column: 1; grid-row: 1; }
   .ob-center  { grid-column: 1; grid-row: 2; }
   .ob-moomin  { grid-column: 1; grid-row: 3; }
-  }s
+  }
